@@ -1,17 +1,21 @@
 package com.soundspace.service;
+
+import com.soundspace.entity.Song;
+import com.soundspace.entity.StorageKey;
+import com.soundspace.repository.SongRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.core.io.UrlResource;
 import org.springframework.core.io.support.ResourceRegion;
 import org.springframework.http.HttpRange;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.NoSuchElementException;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import lombok.RequiredArgsConstructor;
-import com.soundspace.entity.Song;
-import com.soundspace.repository.SongRepository;
+
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.List;
+import java.util.NoSuchElementException;
 
 @Service
 @RequiredArgsConstructor
@@ -29,7 +33,12 @@ public class SongStreamingService {
 
         validateAccess(song, requesterEmail);
 
-        Path path = storageService.resolvePath(song.getAudioStorageKey());
+        StorageKey audioKey = song.getAudioStorageKey();
+        if (audioKey == null || audioKey.getKey() == null || audioKey.getKey().isBlank()) {
+            throw new NoSuchElementException("Brak przypisanego pliku audio dla piosenki");
+        }
+
+        Path path = storageService.resolvePath(audioKey.getKey());
         if (!Files.exists(path)) {
             throw new NoSuchElementException("Plik fizyczny nie istnieje");
         }
@@ -42,11 +51,15 @@ public class SongStreamingService {
             long rangeLength = Math.min(CHUNK_SIZE, contentLength);
             return new ResourceRegion(resource, 0, rangeLength);
         } else {
-            HttpRange range = HttpRange.parseRanges(rangeHeader).get(0);
+            List<HttpRange> ranges = HttpRange.parseRanges(rangeHeader);
+            if (ranges.isEmpty()) {
+                long rangeLength = Math.min(CHUNK_SIZE, contentLength);
+                return new ResourceRegion(resource, 0, rangeLength);
+            }
+            HttpRange range = ranges.getFirst();
             long start = range.getRangeStart(contentLength);
             long end = range.getRangeEnd(contentLength);
             long rangeLength = Math.min(CHUNK_SIZE, end - start + 1);
-
             return new ResourceRegion(resource, start, rangeLength);
         }
     }
@@ -55,15 +68,16 @@ public class SongStreamingService {
         if (Boolean.TRUE.equals(song.getPubliclyVisible())) {
             return;
         }
+            String authorEmail = song.getAuthor().getEmail();
 
-        if (!song.getAuthor().getEmail().equals(email)) {
+        if (!authorEmail.equals(email)) {
             throw new AccessDeniedException("Brak dostępu");
         }
     }
 
     public String getSongMimeType(Long songId) {
         return songRepository.findById(songId)
-                .map(Song::getCoverFileMimeType)
-                .orElse("application/octet-stream"); // fallback
+                .map(s ->  s.getAudioStorageKey().getMimeType())
+                .orElse("application/octet-stream"); //fallback
     }
 }
